--- a/Pegasus.xcodeproj/xcshareddata/xcschemes/Pegasus.xcscheme
+++ b/Pegasus.xcodeproj/xcshareddata/xcschemes/Pegasus.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "508B06321A48867000DC2375"
-               BuildableName = "Pegasus.app"
+               BuildableName = "PegasusTest.app"
                BlueprintName = "Pegasus"
                ReferencedContainer = "container:Pegasus.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "508B06321A48867000DC2375"
-            BuildableName = "Pegasus.app"
+            BuildableName = "PegasusTest.app"
             BlueprintName = "Pegasus"
             ReferencedContainer = "container:Pegasus.xcodeproj">
          </BuildableReference>
@@ -53,7 +53,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "508B06321A48867000DC2375"
-            BuildableName = "Pegasus.app"
+            BuildableName = "PegasusTest.app"
             BlueprintName = "Pegasus"
             ReferencedContainer = "container:Pegasus.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "508B06321A48867000DC2375"
-            BuildableName = "Pegasus.app"
+            BuildableName = "PegasusTest.app"
             BlueprintName = "Pegasus"
             ReferencedContainer = "container:Pegasus.xcodeproj">
          </BuildableReference>
