--- a/Pegasus.xcodeproj/xcshareddata/xcschemes/PegasusExtension.xcscheme
+++ b/Pegasus.xcodeproj/xcshareddata/xcschemes/PegasusExtension.xcscheme
@@ -30,7 +30,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "508B06321A48867000DC2375"
-               BuildableName = "PegasusTest.app"
+               BuildableName = "Pegasus.app"
                BlueprintName = "Pegasus"
                ReferencedContainer = "container:Pegasus.xcodeproj">
             </BuildableReference>
@@ -69,7 +69,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "508B06321A48867000DC2375"
-            BuildableName = "PegasusTest.app"
+            BuildableName = "Pegasus.app"
             BlueprintName = "Pegasus"
             ReferencedContainer = "container:Pegasus.xcodeproj">
          </BuildableReference>
@@ -89,7 +89,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "508B06321A48867000DC2375"
-            BuildableName = "PegasusTest.app"
+            BuildableName = "Pegasus.app"
             BlueprintName = "Pegasus"
             ReferencedContainer = "container:Pegasus.xcodeproj">
          </BuildableReference>
