--- a/Pegasus.xcodeproj/xcshareddata/xcschemes/Pegasus.xcscheme
+++ b/Pegasus.xcodeproj/xcshareddata/xcschemes/Pegasus.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:Pegasus.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "508B064B1A48867000DC2375"
+               BuildableName = "PegasusTests.xctest"
+               BlueprintName = "PegasusTests"
+               ReferencedContainer = "container:Pegasus.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -28,6 +42,16 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       buildConfiguration = "Debug">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "508B064B1A48867000DC2375"
+               BuildableName = "PegasusTests.xctest"
+               BlueprintName = "PegasusTests"
+               ReferencedContainer = "container:Pegasus.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
