--- a/Pegasus.entitlements
+++ b/Pegasus.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.fastsocieity.pegasus</string>
+		<string>$(AppIdentifierPrefix)com.fastsociety.pegasus.shared_keychain</string>
 	</array>
 </dict>
 </plist>
