--- a/PegasusExtension.entitlements
+++ b/PegasusExtension.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.fastsociety.pegasus.extension</string>
+		<string>$(AppIdentifierPrefix)com.fastsociety.pegasus.shared_keychain</string>
 	</array>
 </dict>
 </plist>
